crates/uitest/fixtures/parser/const_.snap
---
source: crates/uitest/tests/parser.rs
expression: diags
input_file: crates/uitest/fixtures/parser/const_.fe
---
error[1-0001]: expected type annotation for `const`
  ┌─ const_.fe:1:8
  │
1 │ const X = 10
  │        ^ expected type annotation for `const`

error[1-0001]: expected `=` for const value definition
  ┌─ const_.fe:3:13
  │
3 │ const X: i32 
  │             ^ expected `=` for const value definition

error[1-0001]: expected path segment
  ┌─ const_.fe:5:10
  │
5 │ const X: ]@ = 1
  │          ^ expected path segment

error[1-0001]: unexpected syntax
  ┌─ const_.fe:5:10
  │
5 │ const X: ]@ = 1
  │          ^^ unexpected syntax


